# sdk-typescript

./: .dockerignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  api-extractor.base.json  buf.gen.yaml  buf.yaml  build-worker.mjs  ddos.sh  eslint.config.js  jest.config.js  package-lock.json  package.json  plopfile.js  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  typedoc.json  vitest.config.ts
.changeset/: README.md  add-restate-sdk-gen.md  big-buttons-build.md  brave-tunnels-connect.md  bright-sites-see.md  clever-fibers-rest.md  config.json  dull-books-relax.md  every-jobs-love.md  fuzzy-logger-context.md  little-poems-sleep.md  new-showers-buy.md  pink-rabbits-do.md  pre.json  proud-cars-switch.md  puny-lilies-knock.md  quick-spies-exist.md  rare-turkeys-agree.md  retry-terminology-and-scoped-object-clients.md  shy-breads-prove.md  spicy-context-local.md  tame-tasks-interrupt.md  upset-jokes-follow.md  yellow-gifts-sneeze.md
.github/: cla.yml
.templates/: README.md.hbs  index.ts.hbs  package.json.hbs  tsconfig.build.json.hbs  tsconfig.json.hbs  tsconfig.test.json.hbs  tsdown.config.ts.hbs
.tools/: build-core.sh  build_core.sh  run-sdk-tests.sh  wasm_inline.js
dev-mode/: main.js  package-lock.json  package.json  tsconfig.json
durable_submit/: package-lock.json  package.json  tsconfig.json
examples/: compensations.ts  embedded_example.ts  example.ts  grpc_example.ts  handler_example.ts  ingress.ts  lambda_example.ts  tsconfig.json  workflow_example.ts
proto/: discovery.proto  dynrpc.proto  example.proto  ext.proto  javascript.proto  protocol.proto  services.proto  test.proto
scripts/: generate-example-configs.mjs  get-lib-packages.mjs  run-verification.sh  test-repo-with-plop.sh
sdk-shared-core-wasm-bindings/: Cargo.toml  README.md
sdk-shared-core-wasm-bindings/src/: lib.rs
src/: bidirectional_server.ts  context.ts  context_impl.ts  core.ts  durable_execution.ts  endpoint.ts  example.ts  invocation.ts  journal.ts  lambda_connection.ts  lambda_restate.ts  local_state_store.ts  logger.ts  new_journal.ts  new_state_machine.ts  promise_combinator_tracker.ts  protocol_stream.ts  protoutils.ts  public_api.ts  restate.ts  restate_context.ts  restate_context_impl.ts  state_machine.ts  testdriver.ts  types.ts  utils.ts
test/: awakeable.test.ts  complete_awakeable.test.ts  eager_state.test.ts  example.test.ts  get_and_set_state.test.ts  get_state.test.ts  getandsetstate.test.ts  getstate.test.ts  lambda.test.ts  message_coders.test.ts  promise_combinator_tracker.test.ts  promise_combinators.test.ts  promises.test.ts  protocol_stream.test.ts  protoutils.ts  public_utils.test.ts  send_request.test.ts  sequelize_tx.ts  service_bind.test.ts  side_effect.test.ts  side_effect_failures.test.ts  sleep.test.ts  (+6 more)
(+100 files in other folders)
