[package]
name = "sdk-shared-core-wasm-bindings"
version = "0.1.0"
authors = ["slinkydeveloper <francescoguard@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.121"
restate-sdk-shared-core = { version = "7.0.1", features = ["request_identity", "rust_crypto", "tracing_pretty"] }
serde = { version = "1.0.210", features = ["derive"] }
tsify = { version = "0.5.6", default-features = false, features = ["js"] }
getrandom = { version = "0.2", features = ["js"] } # Needed for jsonwebtoken
js-sys = "0.3.98"
serde_bytes = "0.11.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }

[profile.release]
opt-level = 3
lto = true
# This still runs the panic handler, just wont allow to catch panics.
panic = "abort"
